# DevOps_CPP_Temlate

./: .configure  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DevOps-app  LICENSE  Makefile  Readme.md  backup.yml  cmake_install.cmake  configure  test.yml  test1  test2  test3  uploadToDropbox.sh
Testing/Temporary/: CTestCostData.txt
src/: Hello.cpp  Hello.h  main.cpp  test.cpp
tests/: prog1Test.cpp  prog4.cpp  test2.cpp  test3.cpp
